Fixing central alignment

--- a/styles.css
+++ b/styles.css
@@ -36,6 +36,7 @@ body {
 
 .container {
     text-align: center;
+    margin-top: -125px;
 }
 
 h1 {
